--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-visually-hidden": "^1.1.1",
     "@types/bcrypt": "^5.0.2",
     "@uploadthing/react": "^7.1.5",
+    "@vercel/analytics": "^1.4.1",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
