--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
     "prisma": "^6.2.1",
+    "prisma-dbml-generator": "^0.12.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
